<resources>
    <string name="app_name">Rocketwash</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_login_title">Вход</string>
    <string name="fragment_login_caption">Для записи на автомойку, получения индивидуальных скидок, балов и бонусов необходимо войти под личным PIN-кодом</string>
    <string name="fragment_login_phone_hint">Номер телефона</string>
    <string name="fragment_login_pin_hint">PIN-код</string>
    <string name="fragment_login_btn_enter">ВОЙТИ</string>
    <string name="fragment_login_btn_register">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="fragment_login_btn_skip">ПРОДОЛЖИТЬ БЕЗ РЕГИСТРАЦИИ</string>
    <string name="fragment_login_btn_retry_pin">ВЫСЛАТЬ ПОВТОРНО</string>
    <string name="fragment_login_btn_retry_pin_after">ПОВТОРИТЬ ЧЕРЕЗ</string>
    <string name="fragment_registration_title">Регистрация</string>
    <string name="fragment_registration_caption">Достоверная информация позволит нам сделать обслуживание более комфортным</string>
    <string name="fragment_registration_hint_fio">Имя и фамилия</string>
    <string name="fragment_registration_hint_car_brand">Марка автомобиля</string>
    <string name="fragment_registration_hint_car_model">Модель автомобиля</string>
    <string name="fragment_registration_hint_car_number">Гос номер</string>
    <string name="fragment_registration_hint_phone">Телефон</string>
    <string name="fragment_send_sms_title">Авторизация</string>
    <string name="fragment_send_sms_caption">После завершения регистрации вы сможете записаться на мойку, получить скидки и бесплатные мойки.\nДля завершения регистрации получите PIN-код доступа на свой телефон</string>
    <string name="fragment_send_sms_info">PIN-код подтверждения будет выслан по СМС</string>
    <string name="fragment_without_registration_title">Вход без регистрации</string>
    <string name="fragment_without_registration_caption">Для определения стоимости мойки вашего автомобиля введите, пожалуйста, следующую информацию</string>
    <string name="fragment_network_error_title">Отсутствует соединение</string>
    <string name="fragment_network_error_caption">Проверьте подключение к сети и нажмите продолжить</string>
    <string name="fragment_gps_warning_title">Геолокация</string>
    <string name="fragment_gps_warning_caption">Для отображения ближайших автомоек проверьте включен ли GPS и нажмите продолжить</string>
    <string name="button_next">ПРОДОЛЖИТЬ</string>
    <string name="drawer"></string>
    <string-array name="menu_list">
        <item>shift</item>
        <item>Мои настройки</item>
        <item>Избранные мойки</item>
        <item>История заказов</item>
        <item>Мои сообщения</item>
        <item>Акции</item>
        <item>Рекомендовать друзьям</item>
        <item>Мои баллы</item>
        <item>Информация</item>
        <item>Сменить пользователя</item>
    </string-array>
    <string-array name="menu_icons">
        <item>shift</item>
        <item>@drawable/ic_action_action_settings_grey</item>
        <item>@drawable/ic_action_toggle_star_grey</item>
        <item>@drawable/ic_action_action_history_grey</item>
        <item>@drawable/ic_action_social_notifications_none_grey</item>
        <item>@drawable/ic_action_action_wallet_giftcard_grey</item>
        <item>@drawable/ic_action_social_group_add_grey</item>
        <item>@drawable/ic_action_bl_grey</item>
        <item>@drawable/ic_action_help_grey</item>
        <item>@drawable/ic_action_social_person</item>
    </string-array>
    <string name="need_first_select_carbrand">Сперва выберите марку автомобиля</string>
    <string name="error_loading_data">Не удалось загрузить данные, попробуйте еще раз по позже</string>
    <string name="select_car_brand">Выбор марки автомобиля</string>
    <string name="login_wrong_pin">Не верный PIN-код</string>
    <string name="login_not_found">Пользователь не найден</string>
    <string name="request_pin_success">Запрос на отправку нового PIN-код прошел успешно</string>
    <string name="request_pin_error">Ошибка, не удалось отправить запрос на сброс PIN-кода</string>
    <string name="fragment_login_phone_empty_error">Не указан телефонный номер</string>
    <string name="request_pin_phone_error">Не удалось отправить новый PIN-code , проверьте номер телефона</string>
    <string name="profile">Мои настройки</string>
    <string name="add_carr">Добавить еще один автомобиль</string>
    <string name="cars">Автомобиль %1$s</string>
    <string name="edit">Изменить</string>
    <string name="car">Автомобиль</string>
    <string name="promo">Ваш промокод</string>
    <string name="fragment_profile_achievments">Достижения</string>
    <string name="share_friends">РЕКОМЕНДОВАТЬ ДРУЗЬЯМ</string>
    <string name="fragment_nearest_wash_services">Ближайшие мойки</string>
    <string name="call">ПОЗВОНИТЬ</string>
    <string name="hide">СКРЫТЬ</string>
    <string name="rec">ЗАПИСАТЬСЯ</string>
    <string name="more">ЕЩЁ</string>
    <string name="celected_services">Выбранные услуги</string>
    <string name="order_price">Стоимость заказа</string>
    <string name="personal_price">Личная скидка</string>
    <string name="time_service">Свободное время для записи</string>
    <string name="info_window_create_path">ПРОЛОЖИТЬ МАРШРУТ</string>
    <string name="include_info_wash_sum_price">ИТОГО К ОПЛАТЕ</string>
    <string name="include_info_wash_share_friends">Рекомендуйте приложение друзьям и знакомым, если оно вам нравится и экономит ваше время</string>
    <string name="service_choise">Выбор услуг</string>
    <string name="fragment_service_choise_caption">Для выбора отметьте услуги</string>
    <string name="fragment_edit_profile_name">Личные данные</string>
    <string name="rubleSymbolJava"></string>
    <string name="rubleSymbolJava1">\u20BD</string>
    <string name="my_bonuses_">Мои баллы %d</string>
    <string name="my_discount_" formatted="false">Личная скидка %d%%</string>
    <string name="include_info_wash_service_disabled">Эта мойка еще не доступна для онлайн записи</string>
    <string name="include_info_wash_service_disablet_info">Сообщите нам, если вы хотите использовать онлайн запись для этой автомойки</string>
    <string name="wash_distance">До мойки %1$.1f км</string>
    <string name="report">СООБЩИТЬ</string>
    <string name="fragment_send_sms_emty_phone">Не заполнен телефонный номер</string>
    <string name="button_confirm">ПОДТВЕРДИТЬ</string>
    <string name="fragment_confirmation_caption">Введите 6-ти значный PIN-код, отправленный на номер %1$s</string>
    <string name="fragment_confirmation_title">Подтверждение</string>
    <string name="fragment_confirmation_info">Не получили PIN-код?\nЧерез 5 минут вы сможете запросить его повторно</string>
    <string name="include_wash_service_info">Информация о мойке</string>
    <string name="include_wash_service_reviews">Отзывы</string>
    <string name="include_wash_service_galery">Галерея</string>
    <string name="fragment_wash_service_quick_apply_title">Быстрая запись на мойку</string>
    <string name="fragment_gps_warning_do_not_show_next_time">Не показывать больше</string>
    <string name="network_error">Ошибка получения данных, пожалуйста проверьте подключение к интернету</string>
    <string name="fragment_loading_title">Загрузка</string>
    <string name="fragment_loading_caption">Пожалуйста подождите, идет загрузка данных.</string>
    <string name="no_time">Нет свободного времени</string>
    <string name="reserved">Заказано</string>
    <string name="fragment_info_wash_service_reserved_fail">Ошибка, не удалось записаться на мойку</string>
    <string name="fragment_info_wash_service_reserved_succes">Запись прошла успешно</string>
    <string name="include_wash_service_reserved_info">Информация о записи</string>
    <string name="cancel_record">ОТМЕНИТЬ ЗАПИСЬ</string>
    <string name="fragment_favorites_wash_services_title">Избранные мойки</string>
    <string name="empty">Нет данных.</string>
    <string name="empty_ex">Автомойки в вашем городе не зарегистрированы, оставьте отзыв в Меню->Информация и мы добавим список автомоек для Вас</string>
    <string name="share_with">Рекомендовать друзьям</string>
    <string name="share_data">Рекомендую использовать приложение RocketWash для записи на автомойку. Оно экономит мое время. Скачивай по ссылке: http://goo.gl/5j7dVZ</string>
    <string name="fragment_information_title">Информация</string>
    <string name="url_info">http://rocketwash.ru/information/index.php</string>
    <string name="group_name_reserved">ВЫ ЗАПИСАНЫ, ЖДЕМ ВАС</string>
    <string name="group_name_near">БЛИЖАЙЩИЕ</string>
    <string name="empty_data">Нет данных.</string>
    <string name="fragment_info_wash_service_no_tme_select">Не выбрали время</string>
    <string name="fragment_info_wash_service_no_services_select">Не выраны услуги</string>
    <string name="fragment_without_registration_model_warn">Не выбрана модель автомобиля</string>
    <string name="fragment_without_registration_brand_warn">Не выбрана марка автомобиля</string>
    <string name="gps_warn">Включите GPS либо подождите пока будет получен сигнал со спутника о вашем местоположении. После включения GPS данные загрузятся автоматически</string>
    <string name="fragment_registration_fio_warn">Не заполнены ФИО</string>
    <string name="to_favorites">В ИЗБРАННОЕ</string>
    <string name="fragment_nearest_wash_services_hide">Скрыть мойку ?</string>
    <string name="yeas">ДА</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="fragment_nearest_wash_services_add_to_vaf">Добавить в избранные ?</string>
    <string name="rec_on_carwash">Записаться на мойку?</string>
    <string name="request_verify_error">Не удалось отправить запрос на подтверждение телефона</string>
    <string name="remove">УДАЛИТЬ</string>
    <string name="fragment_nearest_wash_services_remove_to_vaf">Удалить из избранных ?</string>
    <string name="avaiable_rec">МОЖНО ЗАПИСАТЬСЯ</string>
    <string name="fragment_login_quick_already_registered">Вы уже зарегистрированы в нашем приложении, пожалуйста введите PIN-код и получите доступ</string>
    <string name="empty_favorites">Вы еще не добавили ни одну мойку в избранные</string>
    <string name="error_loading_profile_data">Не удалось получить данные вашего профиля</string>
    <string name="error_loading_profile_session_data">Не удалось получить данные вашего профиля, вероятно сессия устарела</string>
    <string name="favorite_add_success">Добавлена успешно</string>
    <string name="favorite_add_fail">Не удалось добавить в избранные</string>
    <string name="error_save_profile_data">Не удалось сохранить измеения профиля</string>
    <string name="data_save_success">Изменения  успешно сохранены</string>
    <string name="error_direction">Не удалось проложить маршрут</string>
    <string name="error_find_address">Не удалось уточнить адрес</string>
    <string name="success_direction">Маршрут проложен</string>
    <string name="cancel_record1">ОТМЕНИТЬ</string>
    <string name="fragment_nearest_wash_services_cancel_reserved">Отменить запись на мойку ?</string>
    <string name="select_country">Выбор страны</string>
    <string name="error_creating_account">Ошибка создания аккаунта</string>
    <string name="car_number">Гос. номер</string>
    <string name="after_refresh_washes">\"После обновления списка моек скрытые мойки вновь появятся.\"</string>
    <string name="select_car_model">Выбор модели автомобиля</string>
    <string name="profile_change">Изменение настроек</string>
    <string name="reserved_on" formatted="false">Вы записаны на: %s</string>
    <string name="duration" formatted="false">Длительность: %s</string>
    <string name="reserved_cost" formatted="false">Стоимость: %s %s</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
</resources>