<RelativeLayout android:id="@+id/main"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context="ru.xor.taxicall.Activity_main$PlaceholderFragment">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                                       xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_alignParentTop="true"
                                       android:background="?attr/colorPrimary"
                                       android:elevation="2dp"
                                       app:theme="@style/AppTheme">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/register_padding_title_cor"
            android:text="@string/fragment_registration_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_font_size"/>

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutButtons"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        android:minHeight="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/txtCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen20dp"
                android:layout_marginTop="@dimen/dimen20dp"
                android:gravity="center_horizontal"
                android:text="@string/fragment_registration_caption"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/text_16sp"/>

            <EditText
                android:id="@+id/edFIO"
                style="@style/EditTextRocket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen20dp"
                android:hint="@string/fragment_registration_hint_fio"
                android:inputType="text"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <EditText
                android:id="@+id/edBrandCar"
                style="@style/EditTextRocket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/fragment_registration_hint_car_brand"
                android:inputType="text"
                android:lines="1"
                android:longClickable="false"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <EditText
                android:id="@+id/edModelCar"
                style="@style/EditTextRocket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/fragment_registration_hint_car_model"
                android:inputType="text"
                android:lines="1"
                android:longClickable="false"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <EditText
                android:id="@+id/edNumberCar"
                style="@style/EditTextRocket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_registration_hint_car_number"
                android:inputType="text"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/color_cursor"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen20dp"
        android:paddingLeft="@dimen/dimen20dp"
        android:paddingRight="@dimen/dimen20dp">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_blue_selector"
            android:text="@string/button_next"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>