<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:minHeight="50dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dimen26dp"
    android:paddingLeft="@dimen/dimen20dp"
    android:paddingRight="@dimen/dimen20dp"
    android:paddingTop="@dimen/dimen26dp">

    <LinearLayout
        android:id="@+id/lcar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_action_user_black" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/fragment_edit_profile_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20sp" />

    </LinearLayout>


    <EditText
        android:id="@+id/edFIO"
        style="@style/EditTextRocket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/fragment_registration_hint_fio"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/color_cursor" />

    <TextView
        android:id="@+id/edPhone"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/divider_20dp"
        android:background="@drawable/textfield_disabled"
        android:gravity="center_vertical"
        android:hint="@string/fragment_registration_hint_phone"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_16sp" />

</LinearLayout>